# libello

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt
.devcontainer/: devcontainer.json
libello/: app.py  dice.py
tests/: test_dice.py
